Inicio da estilização CSS

--- a/index.html
+++ b/index.html
@@ -8,48 +8,52 @@
     <title>DINDIN</title>
 </head>
 <body>
-    <header>
-        <img href="index.html" src="assets/img/logo-header.png" alt="Logo DINDIN">
-        <ul>
+    <header class="nav">
+        <a href="index.html"><img  class="logo" href="index.html" src="assets/img/logo-header.png" alt="Logo DINDIN"></a>
+        <ul class="ul-nav">
             <li>
-                <a href="cursos.html">CURSOS</a>
+                <a class="li-nav" href="cursos.html">CURSOS</a>
             </li>
             <li>
-                <a href="blog.html">BLOG</a>
+                <a class="li-nav margin-nav" href="blog.html">BLOG</a>
             </li>
             <li>
-                <a href="contato.html">CONTATO</a>
+                <a class="li-nav" href="contato.html">CONTATO</a>
             </li>
         </ul>
     </header>
-    <section>
-        <h1>Educação Financeira é tudo de bom</h1>
-        <p>Vem comigo que eu te mostro por onde começar</p>
-        <a href="#">Quero saber mais</a>
-        <img src="assets/img/ilustra-banner.png" alt="Imagem Banner">
+    <section class="section1">
+        <div>
+            <h1>Educação Financeira é tudo de bom</h1>
+            <p>Vem comigo que eu te mostro por onde começar</p>
+            <a class="btn" href="curso.html">Quero saber mais</a>
+        </div>
+        <div>
+            <img src="assets/img/ilustra-banner.png" alt="Imagem Banner">
+        </div>
     </section>
-    <section>
+    <section class="section2">
         <div>
             <img src="assets/img/ilustra-poupando.png" alt="Imagem Poupando">
             <h3>Investimento para iniciantes</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates magnam quis recusandae dolorem debitis aliquam praesentium!</p>
-            <a href="#">Começar agora</a>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <a href="curso.html">Começar agora</a>
         </div>
         <div>
             <img src="assets/img/ilustra-investimento.png" alt="Imagem Investimento">
             <h3>Poupando e Rendendo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates magnam quis recusandae dolorem debitis aliquam praesentium!</p>
-            <a href="#">Começar agora</a>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <a href="curso.html">Começar agora</a>
         </div>
         <div>
             <img src="assets/img/ilustra-independencia.png" alt="Imagem Independencia">
             <h3>Independência Financeira</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates magnam quis recusandae dolorem debitis aliquam praesentium!</p>
-            <a href="#">Começar agora</a>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <a href="curso.html">Começar agora</a>
         </div>
     </section>
-    <section>
         <h2>O QUE FALAM SOBRE NÓS</h2>
+    <section class="section3">
         <div>
             <img src="assets/img/icon-wally.png" alt="Foto Wally">
             <p>”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
@@ -90,15 +94,21 @@
         </div>
         <a href="#">Ver todos os posts</a>
     </section>
-    <footer>
-        <img src="assets/img/logo-footer.png" alt="Logo DINDIN">
-        <ul>
-            <li><a href="cursos.html">CURSOS</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contato.html"> CONTATO</a></li>
+    <footer class="footer">
+        <img class="logo" src="assets/img/logo-footer.png" alt="Logo DINDIN">
+        <ul class="ul-footer">
+            <li><a class="li-nav" href="cursos.html">CURSOS</a></li>
+            <li><a class="li-nav " href="blog.html">BLOG</a></li>
+            <li><a class="li-nav" href="contato.html"> CONTATO</a></li>
         </ul>
-        <a href="#">Quero ser Prof</a>
-        <a href="#">Aqui tem outro Link</a>
+        <div>
+            <div class="link-footer">
+                <a href="#" class="btn">Quero ser Prof</a>
+            </div>
+            <div>
+                <a href="#" class="btn">Tem outro Link</a>
+            </div>
+        </div>
 
     </footer>
 </body>
