--- a/post.html
+++ b/post.html
@@ -8,17 +8,17 @@
     <title>Post</title>
 </head>
 <body>
-    <header>
-        <img href="index.html" src="assets/img/logo-header.png" alt="Logo DINDIN">
-        <ul>
+    <header class="nav">
+        <a href="index.html"><img  class="logo" href="index.html" src="assets/img/logo-header.png" alt="Logo DINDIN"></a>
+        <ul class="ul-nav">
             <li>
-                <a href="cursos.html">CURSOS</a>
+                <a class="li-nav" href="cursos.html">CURSOS</a>
             </li>
             <li>
-                <a href="blog.html">BLOG</a>
+                <a class="li-nav margin-nav" href="blog.html">BLOG</a>
             </li>
             <li>
-                <a href="contato.html">CONTATO</a>
+                <a class="li-nav" href="contato.html">CONTATO</a>
             </li>
         </ul>
     </header>
@@ -56,16 +56,22 @@
                 <a href="#">Começar agora</a>
             </div>
         </section>
-    <footer>
-        <img src="assets/img/logo-footer.png" alt="Logo DINDIN">
-        <ul>
-            <li><a href="cursos.html">CURSOS</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contato.html"> CONTATO</a></li>
-        </ul>
-        <a href="#">Quero ser Prof</a>
-        <a href="#">Aqui tem outro Link</a>
-
-    </footer>
+        <footer class="footer">
+            <img class="logo" src="assets/img/logo-footer.png" alt="Logo DINDIN">
+            <ul class="ul-footer">
+                <li><a class="li-nav" href="cursos.html">CURSOS</a></li>
+                <li><a class="li-nav " href="blog.html">BLOG</a></li>
+                <li><a class="li-nav" href="contato.html"> CONTATO</a></li>
+            </ul>
+            <div>
+                <div class="link-footer">
+                    <a href="#" class="btn">Quero ser Prof</a>
+                </div>
+                <div>
+                    <a href="#" class="btn">Tem outro Link</a>
+                </div>
+            </div>
+    
+        </footer>
 </body>
 </html>
