Continuação da estilização css

--- a/contato.html
+++ b/contato.html
@@ -41,10 +41,10 @@
         </ul>
         <div>
             <div class="link-footer">
-                <a href="#" class="btn">Quero ser Prof</a>
+                <a href="contato.html" class="btn-footer">Quero ser Prof</a>
             </div>
             <div>
-                <a href="#" class="btn">Tem outro Link</a>
+                <a href="contato.html" class="btn-footer">Tem outro Link</a>
             </div>
         </div>
 
