--- a/index.html
+++ b/index.html
@@ -52,48 +52,54 @@
             <a href="curso.html">Começar agora</a>
         </div>
     </section>
-        <h2>O QUE FALAM SOBRE NÓS</h2>
+    <h2 class="h2-grid">O QUE FALAM SOBRE NÓS</h2>
     <section class="section3">
         <div>
             <img src="assets/img/icon-wally.png" alt="Foto Wally">
-            <p>”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
-            <b>Wally, 25</b>
+            <p class="margin-grid-text">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.” <br><br>
+                <b>Wally, 25</b>
+            </p>
         </div>
         <div>
             <img src="assets/img/icon-jaden.png" alt="Foto Jaden">
-            <p>”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
-            <b>Jaden Smith, 23</b>
+            <p class="margin-grid-text">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.” <br><br>
+                 <b>Jaden Smith, 23</b>
+            </p>
         </div>
         <div>
             <img src="assets/img/icon-whoopi.png" alt="Foto Whoophi">
-            <p>”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
-            <b>Whoophi Goldberg, 37</b>
+            <p class="margin-grid-text">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.” <br><br>
+                <b>Whoophi Goldberg, 37</b>
+            </p>
         </div>
         <div>
             <img src="assets/img/icon-jane.png" alt="Foto Janes">
-            <p>”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
-            <b>Janes Joplin, 29</b>
+            <p class="margin-grid-text">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.” <br><br>
+                <b>Janes Joplin, 29</b>
+            </p>
         </div>
     </section>
-    <section>
-        <h2>MAIS CONTEUDO PARA VOCÊ</h2>
+    <h2 class="h2-grid2">MAIS CONTEUDO PARA VOCÊ</h2>
+    <section class="section4">
         <div>
             <img src="assets/img/Rectangle 16.png" alt="">
-            <h4>Itaque earum rerum</h4>
+            <h4 class="h4-section4">Itaque earum rerum</h4>
+            <p>hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+        </div>
+        <div class="margin-nav">
+            <img src="assets/img/Rectangle 16.png" alt="">
+            <h4 class="h4-section4">Itaque earum rerum</h4>
             <p>hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
         </div>
         <div>
             <img src="assets/img/Rectangle 16.png" alt="">
-            <h4>Itaque earum rerum</h4>
+            <h4 class="h4-section4">Itaque earum rerum</h4>
             <p>hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
         </div>
-        <div>
-            <img src="assets/img/Rectangle 16.png" alt="">
-            <h4>Itaque earum rerum</h4>
-            <p>hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-        </div>
-        <a href="#">Ver todos os posts</a>
     </section>
+    <div class="div-btn2">
+        <a class="btn2" href="blog.html">Ver todos os posts</a>
+    </div>
     <footer class="footer">
         <img class="logo" src="assets/img/logo-footer.png" alt="Logo DINDIN">
         <ul class="ul-footer">
@@ -103,10 +109,10 @@
         </ul>
         <div>
             <div class="link-footer">
-                <a href="#" class="btn">Quero ser Prof</a>
+                <a href="contato.html" class="btn-footer">Quero ser Prof</a>
             </div>
             <div>
-                <a href="#" class="btn">Tem outro Link</a>
+                <a href="contato.html" class="btn-footer">Tem outro Link</a>
             </div>
         </div>
 
