Continuação das estilizações CSS

--- a/blog.html
+++ b/blog.html
@@ -22,14 +22,14 @@
             </li>
         </ul>
     </header>
-    <section>
+    <section class="section-blog">
         <div>
             <h1>MAIS CONTEÚDO PARA VOCÊ</h1>
             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
         </div>
         <img src="assets/img/ilustra-blog.png" alt="Imagem Blog">
     </section>
-    <section>
+    <section class="section-grid-cursos">
         <div>
             <img src="assets/img/Rectangle 21.png" alt="">
             <h3>On the other hand, we denounce</h3>
@@ -70,10 +70,10 @@
         </ul>
         <div>
             <div class="link-footer">
-                <a href="#" class="btn">Quero ser Prof</a>
+                <a href="contato.html" class="btn-footer">Quero ser Prof</a>
             </div>
             <div>
-                <a href="#" class="btn">Tem outro Link</a>
+                <a href="contato.html" class="btn-footer">Tem outro Link</a>
             </div>
         </div>
 
