--- a/cursos.html
+++ b/cursos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Cursos</title>
 </head>
-<body>
+<body class="body-cursos">
     <header class="nav">
         <a href="index.html"><img  class="logo" href="index.html" src="assets/img/logo-header.png" alt="Logo DINDIN"></a>
         <ul class="ul-nav">
@@ -22,30 +22,42 @@
             </li>
         </ul>
     </header>
-    <h1>Cursos</h1>
-    <p>Educação financeira é tudo de bom</p>
-    <section>
-        <img src="assets/img/ilustra-poupando.png" alt="Imagem Poupando">
-        <div>
-            <h2>Investimento para iniciantes</h2>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-            <a href="#">Começar agora</a>
-        </div>
+    <div class="cursos">
+        <h1>Cursos</h1>
+        <p>Educação financeira é tudo de bom</p>
+    </div>
+    <section class="section-cursos">
+        <section class="section-cursos linha">
+            <div>
+                <img src="assets/img/ilustra-poupando.png" alt="Imagem Poupando">
+            </div>
+            <div class="div-cursos">
+                <h2>Investimento para iniciantes</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                <a class="btn-cursos" href="curso.html">Começar agora</a>
+            </div>
+        </section>
     </section>
-    <section>
-        <img src="assets/img/ilustra-investimento.png" alt="Imagem Investimento">
-        <div>
-            <h2>Poupando e Rendendo</h2>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-            <a href="#">Começar agora</a>
-        </div>
+    <section class="section-cursos">
+        <section  class="section-cursos linha">
+            <div>
+                <img src="assets/img/ilustra-investimento.png" alt="Imagem Investimento">
+            </div>
+            <div class="div-cursos">
+                <h2>Poupando e Rendendo</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                <a class="btn-cursos" href="curso.html">Começar agora</a>
+            </div>
+        </section>
     </section>
-    <section>
-        <img src="assets/img/ilustra-independencia.png" alt="Imagem Independência">
+    <section class="section-cursos margin-left-section-cursos">
         <div>
+            <img src="assets/img/ilustra-independencia.png" alt="Imagem Independência">
+        </div>
+        <div class="div-cursos">
             <h2>Independência Financeira</h2>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-            <a href="#">Começar agora</a>
+            <a class="btn-cursos" href="curso.html">Começar agora</a>
         </div>
     </section>
     <footer class="footer">
@@ -57,10 +69,10 @@
         </ul>
         <div>
             <div class="link-footer">
-                <a href="#" class="btn">Quero ser Prof</a>
+                <a href="contato.html" class="btn-footer">Quero ser Prof</a>
             </div>
             <div>
-                <a href="#" class="btn">Tem outro Link</a>
+                <a href="contato.html" class="btn-footer">Tem outro Link</a>
             </div>
         </div>
 
