--- a/curso.html
+++ b/curso.html
@@ -22,47 +22,58 @@
             </li>
         </ul>
     </header>
-    <section>
+    <section class="section-curso">
         <div>
             <h1>Investimento para iniciantes</h1>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
         </div>
-        <img src="assets/img/ilustra-poupando.png" alt="Imagem Poupando">
-    </section>
-    <section>
         <div>
+            <img src="assets/img/ilustra-poupando.png" alt="Imagem Poupando">
+        </div>
+    </section>
+    <section class="section-curso2">
+        <article class="section-article-curso linha">
             <div>
-                <iframe src="" frameborder="0"></iframe>
+                <iframe width="440" height="250" src="https://www.youtube.com/embed/Lgja0zyzFII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
                 <h2>Aula 1</h2>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-
-                    Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                </p>
+                <br>
+                <br>
+                <br>
+                <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
             </div>
-        </div>
-        <div>
+        </article>
+        <article class="section-article-curso linha">
             <div>
-                <iframe src="" frameborder="0"></iframe>
+                <iframe width="440" height="250" src="https://www.youtube.com/embed/Lgja0zyzFII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
                 <h2>Aula 2</h2>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-
-                    Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                </p>
+                <br>
+                <br>
+                <br>
+                <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
             </div>
-        </div>
-        <div>
+        </article>
+        <article class="section-article-curso margin-article-curso">
             <div>
-                <iframe src="" frameborder="0"></iframe>
+                <iframe width="440" height="250" src="https://www.youtube.com/embed/Lgja0zyzFII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
                 <h2>Aula 3</h2>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-
-                    Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                </p>
+                <br>
+                <br>
+                <br>
+                <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
             </div>
-        </div>
+        </article>
     </section>
     <footer class="footer">
         <img class="logo" src="assets/img/logo-footer.png" alt="Logo DINDIN">
@@ -73,10 +84,10 @@
         </ul>
         <div>
             <div class="link-footer">
-                <a href="#" class="btn">Quero ser Prof</a>
+                <a href="contato.html" class="btn-footer">Quero ser Prof</a>
             </div>
             <div>
-                <a href="#" class="btn">Tem outro Link</a>
+                <a href="contato.html" class="btn-footer">Tem outro Link</a>
             </div>
         </div>
 
