Atualização dos caminhos dos Links

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
     </section>
     <div class="div-btn2">
-        <a class="btn2" href="blog.html">Ver todos os posts</a>
+        <a class="btn2" href="post.html">Ver todos os posts</a>
     </div>
     <footer class="footer">
         <img class="logo" src="assets/img/logo-footer.png" alt="Logo DINDIN">
