--- a/post.html
+++ b/post.html
@@ -59,19 +59,19 @@
                 <img src="assets/img/ilustra-poupando.png" alt="Imagem Poupando">
                 <h3>Investimento para iniciantes</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates magnam quis recusandae dolorem debitis aliquam praesentium!</p>
-                <a href="#">Começar agora</a>
+                <a href="curso.html">Começar agora</a>
             </div>
             <div>
                 <img src="assets/img/ilustra-investimento.png" alt="Imagem Investimento">
                 <h3>Poupando e Rendendo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates magnam quis recusandae dolorem debitis aliquam praesentium!</p>
-                <a href="#">Começar agora</a>
+                <a href="curso.html">Começar agora</a>
             </div>
             <div>
                 <img src="assets/img/ilustra-independencia.png" alt="Imagem Independencia">
                 <h3>Independência Financeira</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates magnam quis recusandae dolorem debitis aliquam praesentium!</p>
-                <a href="#">Começar agora</a>
+                <a href="curso.html">Começar agora</a>
             </div>
         </section>
         <footer class="footer">
